0.0.1:

* Initial release.

0.0.2:

* Fixed pathlib compatibility on some versions of Python

* Switched compression method to ZIP_DEFLATED for better compatibility

* Fixed various minor issues that broke with pyinstaller

* pretor-psf how stores the Pretor version and PSF format revision number in
  each PSF file. PSFs with missing format revisions are assumed to be revision
  0, which is the current. PSFs with newer format revisions will not be
  unpacked.

0.0.3:

* --no_meta_check, --allow_no_tom, and --disable_version_check now write keys
  into both metadata and forensic data.

* Implemented support for a 'valid_assignment_names' field in pretor.toml,
  which causes pretor-psf --create to validate that the specified assignment
  name is one of those specified in this list.

* Implemented --interact action in pretor-psf, allowing in-place grading without
  using pretor-grade.

* Implemented --coursepath flag in pretor-psf, for use with --interact.

* Implemented --lsrev action in pretor-psf.

0.0.4:

* Implemented pretor-query command